# keyring-to-kdbx

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/: QUICK_REFERENCE.md  README.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  release.yml
docs/: AI_DEVELOPMENT.md  QUICKSTART.md
examples/: export_example.py
src/keyring_to_kdbx/: __init__.py  __main__.py  cli.py  exporter.py  kdbx_manager.py  keyring_reader.py
tests/: __init__.py  test_exporter.py  test_kdbx_manager.py  test_keyring_reader.py
